Bug 75693 - [HSW]igt/pm_pc8/reg-read-ioctl fails
Summary: [HSW]igt/pm_pc8/reg-read-ioctl fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Paulo Zanoni
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-03 06:53 UTC by lu hua
Modified: 2017-10-06 14:39 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (110.87 KB, text/plain)
2014-03-03 06:53 UTC, lu hua
no flags Details

Description lu hua 2014-03-03 06:53:26 UTC
Created attachment 95002 [details]
dmesg

System Environment:
--------------------------
Platform: Haswell
kernel    (drm-intel-fixes)e20ec540c7796a46107da2ec51c702fcd9af8e17

Bug detailed description:
-----------------------------
New case pm_pc8/reg-read-ioctl fails on Haswell with -fixes, -queued and -nihglty kernel.

output:
IGT-Version: 1.5-g072d358 (x86_64) (Linux: 3.13.0-rc8_drm-intel-fixes_e20ec5_201                                                                                                 40303+ x86_64)
Runtime PM support: 1
PC8 residency support: 0
Test assertion failure function reg_read_ioctl_subtest, file pm_pc8.c:1409:
Last errno: 5, Input/output error
Failed assertion: wait_for_suspended()
Subtest reg-read-ioctl: FAIL


Reproduce steps:
-------------------------
1. ./pm_pc8 --run-subtest reg-read-ioctl
Comment 1 Daniel Vetter 2014-03-03 07:17:37 UTC
Judging by the igt commit Paulo has a fix for this, but I haven't yet recovered from the mail flood.
Comment 2 Paulo Zanoni 2014-03-07 23:35:14 UTC
Hi

The current drm-intel-nightly tree has some problems with runtime PM, so none of the current tests are passing. I already submitted patches to fix that: "[PATCH 0/6] More runtime PM fixes".

The fix for this specific bug is "[PATCH 3/6] drm/i915: get runtime PM at i915_reg_read_ioctl", which can be found here: http://lists.freedesktop.org/archives/intel-gfx/2014-March/041364.html

Thanks,
Paulo
Comment 3 Paulo Zanoni 2014-04-02 14:41:01 UTC
Hi

Patch "drm/i915: get runtime PM at i915_reg_read_ioctl" was merged on -fixes, and I'm pretty sure it fixes the reported bug. If the bug still happens, please reopen the bug report.

Thanks,
Paulo
Comment 4 lu hua 2014-04-03 02:56:55 UTC
Verified.fixed.
Comment 5 Elizabeth 2017-10-06 14:39:35 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.